--- a/scilab/modules/types/Makefile.am
+++ b/scilab/modules/types/Makefile.am
@@ -21,6 +21,7 @@ TYPES_CPP_SOURCES 	= src/cpp/types.cpp \
 			src/cpp/matrixpoly.cpp \
 			src/cpp/tostring_common.cpp \
 			src/cpp/function.cpp \
+			src/cpp/macrofile.cpp \
 			src/cpp/macro.cpp
 
 pkglib_LTLIBRARIES 	= libscitypes.la
@@ -32,6 +33,9 @@ libscitypes_la_CXXFLAGS	=	-Iincludes/ \
 				-I../operations/includes \
 				-I../symbol/includes \
 				-I../abstractSyntaxTree/includes \
+				-I../output_stream/includes \
+				-I../parse/includes \
+				-I../system_env/includes \
 				-Isrc/cpp
 
 libscitypes_la_includedir=$(pkgincludedir)/Types
