--- a/scilab/Makefile.in
+++ b/scilab/Makefile.in
@@ -209,7 +209,8 @@ scilab6_bin_DEPENDENCIES = $(top_builddir)/modules/libscilab.la \
 	$(top_builddir)/modules/types/libscitypes.la \
 	$(top_builddir)/modules/system_env/libscisystem_env.la \
 	$(top_builddir)/modules/functions_manager/libscifunctions_manager.la \
-	$(top_builddir)/modules/core/libscicore.la
+	$(top_builddir)/modules/core/libscicore.la \
+	$(top_builddir)/modules/output_stream/libscioutput_stream.la
 binSCRIPT_INSTALL = $(INSTALL_SCRIPT)
 SCRIPTS = $(bin_SCRIPTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)/modules/core/includes
@@ -574,6 +575,7 @@ scilab6_bin_CPPFLAGS = \
 						-I$(top_srcdir)/modules/system_env/includes/ \
 						-I$(top_srcdir)/modules/functions_manager/includes/ \
 						-I$(top_srcdir)/modules/shell/includes/ \
+						-I$(top_srcdir)/modules/output_stream/includes/ \
 						-I$(top_srcdir)/modules/console/includes/
 
 scilab6_bin_LDADD = $(top_builddir)/modules/libscilab.la \
@@ -583,7 +585,8 @@ $(top_builddir)/modules/parse/libsciparse.la \
 $(top_builddir)/modules/types/libscitypes.la \
 $(top_builddir)/modules/system_env/libscisystem_env.la \
 $(top_builddir)/modules/functions_manager/libscifunctions_manager.la \
-$(top_builddir)/modules/core/libscicore.la
+$(top_builddir)/modules/core/libscicore.la \
+$(top_builddir)/modules/output_stream/libscioutput_stream.la
 
 LANG_DOMAIN = scilab
 TARGETS_ALL = macros
