--- a/scilab/modules/types/Makefile.in
+++ b/scilab/modules/types/Makefile.in
@@ -74,7 +74,8 @@ am__objects_1 = libscitypes_la-types.lo libscitypes_la-int.lo \
 	libscitypes_la-bool.lo libscitypes_la-float.lo \
 	libscitypes_la-implicitlist.lo libscitypes_la-poly.lo \
 	libscitypes_la-matrixpoly.lo libscitypes_la-tostring_common.lo \
-	libscitypes_la-function.lo libscitypes_la-macro.lo
+	libscitypes_la-function.lo libscitypes_la-macrofile.lo \
+	libscitypes_la-macro.lo
 am_libscitypes_la_OBJECTS = $(am__objects_1)
 libscitypes_la_OBJECTS = $(am_libscitypes_la_OBJECTS)
 libscitypes_la_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
@@ -352,6 +353,7 @@ TYPES_CPP_SOURCES = src/cpp/types.cpp \
 			src/cpp/matrixpoly.cpp \
 			src/cpp/tostring_common.cpp \
 			src/cpp/function.cpp \
+			src/cpp/macrofile.cpp \
 			src/cpp/macro.cpp
 
 pkglib_LTLIBRARIES = libscitypes.la
@@ -361,6 +363,9 @@ libscitypes_la_CXXFLAGS = -Iincludes/ \
 				-I../operations/includes \
 				-I../symbol/includes \
 				-I../abstractSyntaxTree/includes \
+				-I../output_stream/includes \
+				-I../parse/includes \
+				-I../system_env/includes \
 				-Isrc/cpp
 
 libscitypes_la_includedir = $(pkgincludedir)/Types
@@ -460,6 +465,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscitypes_la-implicitlist.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscitypes_la-int.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscitypes_la-macro.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscitypes_la-macrofile.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscitypes_la-matrixpoly.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscitypes_la-poly.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscitypes_la-string.Plo@am__quote@
@@ -564,6 +570,13 @@ libscitypes_la-function.lo: src/cpp/function.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/cpp/function.cpp' object='libscitypes_la-function.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libscitypes_la_CXXFLAGS) $(CXXFLAGS) -c -o libscitypes_la-function.lo `test -f 'src/cpp/function.cpp' || echo '$(srcdir)/'`src/cpp/function.cpp
+
+libscitypes_la-macrofile.lo: src/cpp/macrofile.cpp
+@am__fastdepCXX_TRUE@	$(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libscitypes_la_CXXFLAGS) $(CXXFLAGS) -MT libscitypes_la-macrofile.lo -MD -MP -MF $(DEPDIR)/libscitypes_la-macrofile.Tpo -c -o libscitypes_la-macrofile.lo `test -f 'src/cpp/macrofile.cpp' || echo '$(srcdir)/'`src/cpp/macrofile.cpp
+@am__fastdepCXX_TRUE@	mv -f $(DEPDIR)/libscitypes_la-macrofile.Tpo $(DEPDIR)/libscitypes_la-macrofile.Plo
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/cpp/macrofile.cpp' object='libscitypes_la-macrofile.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libscitypes_la_CXXFLAGS) $(CXXFLAGS) -c -o libscitypes_la-macrofile.lo `test -f 'src/cpp/macrofile.cpp' || echo '$(srcdir)/'`src/cpp/macrofile.cpp
 
 libscitypes_la-macro.lo: src/cpp/macro.cpp
 @am__fastdepCXX_TRUE@	$(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libscitypes_la_CXXFLAGS) $(CXXFLAGS) -MT libscitypes_la-macro.lo -MD -MP -MF $(DEPDIR)/libscitypes_la-macro.Tpo -c -o libscitypes_la-macro.lo `test -f 'src/cpp/macro.cpp' || echo '$(srcdir)/'`src/cpp/macro.cpp
