--- a/scilab/modules/functions_manager/functions_manager.vcproj
+++ b/scilab/modules/functions_manager/functions_manager.vcproj
@@ -340,6 +340,10 @@
 			>
 		</Filter>
 		<File
+			RelativePath="..\..\bin\libintl.lib"
+			>
+		</File>
+		<File
 			RelativePath="..\..\bin\libxml2.lib"
 			>
 		</File>
