Correct CFLAGS compiling --without-fftw

--- a/scilab/modules/fftw/Makefile.am
+++ b/scilab/modules/fftw/Makefile.am
@@ -73,8 +73,10 @@ FFTW_C_SOURCES = src/nofftw/nofftw.c
 
 libscifftw_la_SOURCES = $(FFTW_C_SOURCES)
 
-libscifftw_la_CFLAGS= -I$(top_srcdir)/modules/api_scilab/includes \
--I$(top_srcdir)/modules/output_stream/includes
+libscifftw_la_CFLAGS= 	-I$(srcdir)/includes/ \
+			-I$(srcdir)/src/c/ \
+			-I$(top_srcdir)/modules/api_scilab/includes \
+			-I$(top_srcdir)/modules/output_stream/includes
 endif
 
 include $(top_srcdir)/Makefile.incl.am
