--- a/scilab/modules/fileio/fileio.vcproj
+++ b/scilab/modules/fileio/fileio.vcproj
@@ -605,6 +605,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sci_gateway\c\sci_isfile.c"
+				>
+			</File>
+			<File
 				RelativePath=".\sci_gateway\c\sci_maxfiles.c"
 				>
 			</File>
