--- a/scilab/modules/functions_manager/Makefile.in
+++ b/scilab/modules/functions_manager/Makefile.in
@@ -234,6 +234,7 @@ PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
 PACKAGE_NAME = @PACKAGE_NAME@
 PACKAGE_STRING = @PACKAGE_STRING@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
+PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PCRE_CFLAGS = @PCRE_CFLAGS@
@@ -361,6 +362,7 @@ libscifunctions_manager_la_CXXFLAGS = -I$(top_builddir)/modules/types/includes/ 
 						-I$(top_builddir)/modules/api_scilab/includes/ \
 						-I$(top_builddir)/modules/fileio/includes/ \
 						-I$(top_builddir)/modules/abstractSyntaxTree/includes/ \
+						-I$(top_builddir)/modules/parse/includes/ \
 						-Iincludes/ \
 						-Isrc/cpp \
 						$(XML_FLAGS)
