--- a/scilab/modules/elementary_functions/src/c/elementary_functions.vcproj
+++ b/scilab/modules/elementary_functions/src/c/elementary_functions.vcproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
@@ -640,10 +640,6 @@
 			</File>
 			<File
 				RelativePath=".\scidcopy.c"
-				>
-			</File>
-			<File
-				RelativePath="..\cpp\sortTemplate.cpp"
 				>
 			</File>
 			<File
